--- a/src/screens/header/Header.css
+++ b/src/screens/header/Header.css
@@ -9,3 +9,12 @@
     justify-content: space-between;
     align-items: center;
 }
+.sub_header {
+    background-color:#263238;   
+    color:#fff;
+    padding: 10px;
+    font-size: 18px;
+    display:flex;
+    flex-direction: row;
+    align-items: center;
+}
