Adding Home Page Search Filter Changes

--- a/src/screens/header/Header.css
+++ b/src/screens/header/Header.css
@@ -25,8 +25,9 @@
     float: right;
     cursor: grab;
     background-color: white;
-    height: 80px ;
+    height: 100px ;
     width: 100px;
+    border-radius: 10px;
 }
 
 .searchBox{
